add js textboxlist

--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -26,3 +26,5 @@
     %a.cancel{href: root_path}
     %div{class: (%w[new renew].include? params[:action])? 'send' : 'save'}
       %input{ :type => "submit", :value => " " }
+  %textarea.tag_input
+    
