--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -2,18 +2,10 @@
   as: :post
 
 = form_t params do
-  %h1<
-    = "#{@action}#{@post_type}"
-    - unless @post.errors.empty?
-      %span.post_error<
-        = @post.errors.values.first.first
-
-  = hidden_field_tag :type, @post.type
-  - if params[:action] == 'renew'
-    = hidden_field_tag :parent_id, @parent.id
-
-  = content_for :form
-  .operation
+  .right
+    = hidden_field_tag :type, @post.type
+    - if params[:action] == 'renew'
+      = hidden_field_tag :parent_id, @parent.id
     .page_selector
       .my_pages
         - if @post.new_record? 
@@ -23,12 +15,18 @@
               - @target_blogs.each do |b|
                 %option{value: b.id, selected: b == @default_target_blog}
                   = b.title
-    -#
-      .tags_area
-        %textarea{name: "tags"}
-          = tags_for_post_form @post, (@post.new_record?) ? @default_target_blog : nil
-    %a.cancel{href: root_path}
-    %div{class: (%w[new renew].include? params[:action])? 'send' : 'save'}
-      %input{ :type => "submit", :value => " " }
-  %textarea.tag_input
-    
+    %h2 +添加标签  
+    %input.tags{name: "tags", data: {widget: "textboxlist"}, value: (tags_for_post_form @post, (@post.new_record?) ? @default_target_blog : nil)}
+
+  .left
+    %h1<
+      = "#{@action}#{@post_type}"
+      - unless @post.errors.empty?
+        %span.post_error<
+          = @post.errors.values.first.first
+   
+    = content_for :form
+    .operation
+      %a.cancel{href: root_path}
+      %div{class: (%w[new renew].include? params[:action])? 'send' : 'save'}
+        %input{ :type => "submit", :value => " " }
