--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -158,8 +158,8 @@
   .title_link,
   .url_image
     clear: both
-    width: 600px
-    padding: 5px 0 5px 20px
+    width: 620px
+    padding: 5px 0
     font-size: $input-font-size
     height: $input-height + 5px
     line-height: $input-height + 5px
@@ -169,6 +169,7 @@
     margin-bottom: 30px
 
     label
+      padding-left: 20px
       color: gray
 
   .rich_text
