--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -21,6 +21,22 @@
   padding: 20px 15px 0px 15px
   @include single_line(30px)
 
+  .tags
+    height: 14px
+    font-size: 12px
+    line-height: 14px
+    position: relative
+    bottom: -20px
+    a
+      display: block
+      text-decoration: none
+      float: left
+      margin-right: 5px
+      color: #888888
+      &:hover
+        text-decoration: underline
+        color: #3f7be0
+
   .left
     width: 200px
     float: left
