--- a/public/stylesheets/textboxlist.css
+++ b/public/stylesheets/textboxlist.css
@@ -8,7 +8,7 @@
     cursor: text; 
     border:1px solid #cadbea;
     width:184px;
-    font-size:20px;
+    font-size:12px;
     font-family:microsoft yahei;
     line-height:45px;
     -moz-border-radius:8px;
@@ -19,7 +19,12 @@
 .textboxlist-bits { zoom: 1; overflow: hidden; margin: 0; padding: 3px 4px 0; *padding-bottom: 3px; }
 .textboxlist-bit { list-style-type: none; float: left; display: block; padding: 0; margin: 0 5px 3px 0; cursor: default; }
 .textboxlist-bit-editable { border: 1px solid #fff; }
-.textboxlist-bit-editable-input { border: 0; padding: 2px 0; *padding-bottom: 0; height: 14px; font: 11px "Lucida Grande", Verdana; }
+.textboxlist-bit-editable-input { 
+    border: 0; 
+    padding: 2px 0; 
+    font-size:12px;
+    *padding-bottom: 0;
+}
 .textboxlist-bit-editable-input:focus { outline: 0; }
 .textboxlist-bit-box { position: relative; line-height: 18px; padding: 0 5px; -moz-border-radius: 9px; -webkit-border-radius: 9px; border-radius: 9px; border: 1px solid #CAD8F3; background: #DEE7F8; cursor: default; }
 .textboxlist-bit-box-deletable { padding-right: 15px; }
