--- a/app/views/blogs/edit.html.haml
+++ b/app/views/blogs/edit.html.haml
@@ -7,6 +7,14 @@
   .error
     &nbsp;
     = @blog.errors[:title].first
+  .page_tag
+    = f.label :tag, "兴趣类型"
+    = f.text_field :tag
+  .error
+    %span.suggestion
+      (只可以填写一个类型，文字中不可以包含“逗号”)
+    &nbsp;
+    = @blog.errors[:tag].first
   .page_url
     = f.label :uri, "自定义网址"
     = f.text_field :uri
@@ -17,10 +25,6 @@
       (网址随时都可以修改)
     &nbsp;
     = @blog.errors[:uri].first
-  -#
-    .page_tag
-      = f.label :tag, "标签(每个页面只能有一个)"
-      = f.text_field :tag
   .page_logo
     %label
       %img#blog_icon_img{ :src => @blog.icon.url_for(:medium) }
