--- a/public/stylesheets/tags.sass
+++ b/public/stylesheets/tags.sass
@@ -27,15 +27,13 @@
   .item
     width: 198px
     height: 40px
-  &.item .logo
-    width: 42px
-    height: 40px
-    float: left
-  .item
-    .logo img
-      background: url('images/test_009.gif') no-repeat
-      margin: 5px 5px 3px 10px
-      border: 0
+    .logo
+      height: 40px
+      float: left
+      img
+        margin: 5px 5px 3px 10px
+        border: 0
+
     .page_name
       width: 130px
       height: 40px
@@ -56,9 +54,10 @@
       height: 40px
       float: right
       a
-        width: 14px
-        height: 14px
-        margin: 12px 10px 0 0
-        display: block
-        background: url('/images/icons.gif') -20px 0px
-        overflow: hidden
+        .btn_follow
+          width: 14px
+          height: 14px
+          margin: 12px 10px 0 0
+          background: url('/images/icons.gif') -20px 0px
+          display: block
+          overflow: hidden
