--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -10,7 +10,7 @@
   %h1= @tag
   .timeline{ :data => { :widget => "sugar" } }
     = render :partial => "posts/post_full", :collection => @posts, :as => :post
-    = pagination_standard  
+    = pagination(@posts)
 - unless @blogs.empty?
   .editors
     .list
