--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -56,6 +56,7 @@
     float: left
 
   .image_url_starter
+  .image_local_starter
     width: 200px
     display: block
     float: left
@@ -98,7 +99,7 @@
       float: right
 
     input
-      width: 200px
+      width: 180px
       margin-right: 150px
 
   .list_image
