--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -13,7 +13,8 @@
             -# 发布至:
             %select#blog_id{name: 'blog_id', data: {widget: 'prettySelect'}}
               - @target_blogs.each do |b|
-                %option{value: b.id, selected: b == @default_target_blog}
+                %option{value: b.id, selected: b == @default_target_blog,
+                  data: {tags: b.tag}}
                   = b.title
     %h2 添加标签  
     %input.tags{name: "tags", data: {widget: "textboxlist"}, value: (tags_for_post_form @post, (@post.new_record?) ? @default_target_blog : nil)}
