--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -11,7 +11,7 @@
         - if @post.new_record? 
           %p
             -# 发布至:
-            %select#blog_id{name: 'blog_id', data: {widget: 'prettySelect'}}
+            %select#blog_id{name: 'blog_id', data: {widget: (@post.tags.blank? ? "changeTag" : "")}}
               - @target_blogs.each do |b|
                 %option{value: b.id, selected: b == @default_target_blog,
                   data: {tags: b.tag}}
