--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -23,16 +23,14 @@
 
   .tags
     height: 14px
+    color: #888888
     font-size: 12px
     line-height: 14px
     position: relative
     bottom: -20px
     a
-      display: block
-      text-decoration: none
-      float: left
-      margin-right: 5px
       color: #888888
+      text-decoration: none
       &:hover
         text-decoration: underline
         color: #3f7be0
