--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -25,6 +25,7 @@
 
   .submit_box
     input
+      @include hide_text
       display: block
       margin: auto
       width: 150px
@@ -46,6 +47,7 @@ span.suggestion
 
 .edit_page
   .submit_box input
+    @include hide_text
     background: url('/images/post_save.gif')
 
   .page_logo
