--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -28,4 +28,4 @@
     = @user.errors[:password_confirmation].first
   = hidden_field_tag 'code', @inv_user.inv_code
   .submit_box
-    = f.submit " "
+    = f.submit "注册"
