--- a/lib/default_blog_template.mustache
+++ b/lib/default_blog_template.mustache
@@ -21,7 +21,7 @@
       </div>
       <div id='content'>
         {#posts}
-          <div class='post {type}'>
+          <div class='post {type} {post_type}'>
             <div class='content_head'>
               {#repost_tag}
               转帖
