Fix follow/unfollow on default template

--- a/lib/default_blog_template.mustache
+++ b/lib/default_blog_template.mustache
@@ -12,6 +12,7 @@
         <a class='back_to_home' href='{{home_url}}'>
           回我的主页
         </a>
+        {{follow_tag}}
       </div>
       <div id='title'>
         <a href='{{url}}'>
