BlogView#apply_tag

--- a/lib/default_blog_template.mustache
+++ b/lib/default_blog_template.mustache
@@ -13,6 +13,9 @@
           回我的主页
         </a>
         {{follow_tag}}
+        {{#apply_tag}}
+          申请加入
+        {{/apply_tag}}
       </div>
       <div id='title'>
         <a href='{{url}}'>
