--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -432,12 +432,18 @@ fieldset.appearance
         display: none
       .cleaner
         display: auto
-    
+
   .booleans
     input
       font-size: 18px
     label
       margin-left: 3px
+  .text
+    input
+      background: url("/images/input_bg.gif") repeat-x scroll center top #FFFFFF
+      border: 1px solid #DDDDDD
+      padding: 5px
+      font-size: 18px
 
 .customize_navigation
   @include clear_fix
