--- a/app/views/blogs/_template_variables.html.haml
+++ b/app/views/blogs/_template_variables.html.haml
@@ -24,3 +24,9 @@
       checked: (var['value'] == "0" ? false : "checked"), value: 1, data: {default_value: var['default_value'], widget: "checkbox_preview"}}
     %label 
       = var['desc']
+
+- @variables['text'].each do |name, var|
+  - next if var['desc'].blank?
+  .text
+    %label= var['desc']
+    %input{name: "blog[template_conf][text][#{name}][value]", value: var['value']}
