--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -145,6 +145,8 @@
         border: 1px solid gray
         font-size: 20px
         line-height: 32px
+      span
+        line-height: 32px
 
     .the_close
       width: 14px
