Thumbnail for default template

--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -339,6 +339,9 @@ form.edit_blog
         font-weight: normal
         color: gray
         text-decoration: none
+      .author_name
+        color: gray
+        display: inline
 
 
     .image
