--- a/app/views/blogs/customize.html.haml
+++ b/app/views/blogs/customize.html.haml
@@ -50,12 +50,19 @@
         - @templates.each do |t|
           .theme{data: {value: t.id}, class: t.id == @blog.template.id ? 'selected' : ''}
             %span
-              %img{src: t.thumbnail.url_for(:small)}
+              - if t.id
+                %img{src: t.thumbnail.url_for(:small)}
+              - else
+                = image_tag 'default_template.gif'
             .shadow
             %div
-              %a{href: blog_path(t.author.primary_blog)}
-                = t.author.name
-              = t.name
+              - if t.id
+                %a{href: blog_path(t.author.primary_blog)}
+                  = t.author.name
+                = t.name
+              - else
+                .author_name 管理员
+                默认模板
       .buttons
         %a.button{href: "###", data: {widget: 'toggler', target: 'fieldset.template',
           classes: 'editing_custom_html picking_template', field: 'blog[using_custom_html]'}}
