--- a/app/views/posts/_form_pics.html.haml
+++ b/app/views/posts/_form_pics.html.haml
@@ -3,7 +3,7 @@
 
 - content_for :form do
   #box_file{ :class => 'file_image' }
-    %input{ :type => 'file', :id => 'image_uploader', :name => 'file', :autocomplete => 'off', :size => 3}
+    %input{ :type => 'file', :id => 'image_uploader', :name => 'file', :autocomplete => 'off'}
     %span{ :class => 'slight' }<
       图片格式支持JPEG，GIF，PNG，最大4MB。
   #box_url{ :class => 'url_image', :style => 'display:none;' }
