--- a/app/views/blogs/customize.html.haml
+++ b/app/views/blogs/customize.html.haml
@@ -2,7 +2,7 @@
 - js 'k.customize', 'moorainbow', "mooeditable", "mooeditable.local"
 - content_for :site_layout, 'blog_customization'
 
-.customize_panel
+.customize_panel#customize_panel
   %ul.customize_navigation{data: {widget: 'tab', contentsHolder: 'form.edit_blog',
     contents: 'fieldset', activateOnLoad: 1, name: 'customize'}}
     %li.blog_info 页面信息
