--- a/lib/default_blog_template.mustache
+++ b/lib/default_blog_template.mustache
@@ -8,15 +8,7 @@
   </head>
   <body>
     <div id="wrapper">
-      <div class='commands'>
-        <a class='back_to_home' href='{{home_url}}'>
-          回我的主页
-        </a>
-        {{follow_tag}}
-        {{#apply_tag}}
-          申请加入
-        {{/apply_tag}}
-      </div>
+      {{control_buttons}}
       <div id='title'>
         <a href='{{url}}'>
           {{title}}
