--- a/lib/default_blog_template.mustache
+++ b/lib/default_blog_template.mustache
@@ -1,10 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
   <head>
+    <meta charset='utf-8'></meta>
     <link rel="shortcut icon" href="/images/favicon.ico">
     <title>{{title}}</title>
     <link href="/stylesheets/post_display.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/blog_show.css" media="screen" rel="stylesheet" type="text/css" />
+    <meta name="description" content="{{meta_desc}}"></meta>
   </head>
   <body>
     <div id="wrapper">
